--- a/activityResultApi/src/main/AndroidManifest.xml
+++ b/activityResultApi/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sample">
-        <activity android:name=".RequestMultiPermissionActivity"></activity>
+        <activity android:name=".TakePictureActivity"></activity>
+        <activity android:name=".RequestMultiPermissionActivity" />
         <activity android:name=".RequestPermissionActivity" />
         <activity android:name=".TestActivityResultActivity" />
         <activity android:name=".StartActivity" />
@@ -20,6 +21,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
 </manifest>
