新增类型测试

--- a/activityResultApi/src/main/AndroidManifest.xml
+++ b/activityResultApi/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sample">
-        <activity android:name=".TakePictureActivity"></activity>
+        <activity android:name=".PickContactActivity"></activity>
+        <activity android:name=".TakePicturePreviewActivity" />
+        <activity android:name=".TakePictureActivity" />
         <activity android:name=".RequestMultiPermissionActivity" />
         <activity android:name=".RequestPermissionActivity" />
         <activity android:name=".TestActivityResultActivity" />
@@ -22,7 +24,6 @@
             </intent-filter>
         </activity>
 
-
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -32,7 +33,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
     </application>
 
 </manifest>
