--- a/activityResultApi/build.gradle
+++ b/activityResultApi/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation AndroidX.androidx_constraint
     implementation AndroidX.activity_ktx
     implementation AndroidX.fragment_ktx
+    implementation AndroidX.lifecycleCommon
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.2.1'
