--- a/activityResultApi/src/main/AndroidManifest.xml
+++ b/activityResultApi/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sample">
-        <activity android:name=".GetContentActivity"></activity>
+        <activity android:name=".OtherClassUseActivity"></activity>
+        <activity android:name=".CustomActivityContract" />
+        <activity android:name=".GetContentActivity" />
         <activity android:name=".PickContactActivity" />
         <activity android:name=".TakePicturePreviewActivity" />
         <activity android:name=".TakePictureActivity" />
