--- a/room/build.gradle
+++ b/room/build.gradle
@@ -1,17 +1,18 @@
 import com.github.versionplugin.AndroidX
+import com.github.versionplugin.Room
 
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.github.weiggle"
-        minSdkVersion 19
+        applicationId "com.github.weiggle.room"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -33,18 +34,26 @@ android {
         jvmTarget = '1.8'
     }
 
-    buildFeatures {
-        viewBinding = true
+    packagingOptions {
+        exclude 'META-INF/atomicfu.kotlin_module'
+    }
+
+    viewBinding {
+        enabled = true
     }
 }
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation AndroidX.androidx_core_ktx
-    implementation AndroidX.androidx_appcompat
-    implementation AndroidX.material
-    implementation AndroidX.androidx_constraint
     implementation AndroidX.activity_ktx
     implementation AndroidX.fragment_ktx
+    implementation Room.Room
+    kapt Room.RoomCompiler
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
