--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 import com.github.versionplugin.AndroidX
+import com.github.versionplugin.Lifecycle
 
 plugins {
     id 'com.android.application'
@@ -47,4 +48,9 @@ dependencies {
     implementation AndroidX.androidx_constraint
     implementation AndroidX.activity_ktx
     implementation AndroidX.fragment_ktx
+    implementation Lifecycle.common
+    implementation Lifecycle.reactivestreams
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
