--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ include ':app'
 rootProject.name = "Sample"
 includeBuild 'VersionPlugin'
 include ':room'
+include ':drawable'
+include ':plugintest'
