--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@
 buildscript {
     ext.kotlin_version = "1.5.30"
     repositories {
+
+        maven {
+            url uri("../../release/")
+        }
         google()
         mavenCentral()
     }
@@ -9,6 +13,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
         classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.0'
+        classpath 'com.weiggle.sample:hello-demo:1.6-SNAPSHOT'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
