--- a/jetpack/build.gradle
+++ b/jetpack/build.gradle
@@ -1,20 +1,16 @@
 import com.github.versionplugin.AndroidX
-import com.github.versionplugin.Lifecycle
 
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'android-aspectjx'
-    id 'hello-demo'
 }
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.github.weiggle"
-        minSdkVersion 19
+        applicationId "com.github.weiggle.jetpack"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -35,28 +31,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    buildFeatures {
-        viewBinding = true
-    }
-
-    greeting {
-        message = "vwlk jn ke w ==========>"
-    }
 }
 
 dependencies {
-    implementation "org.aspectj:aspectjrt:1.9.1"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation AndroidX.androidx_core_ktx
-    implementation AndroidX.androidx_appcompat
-    implementation AndroidX.material
-    implementation AndroidX.androidx_constraint
-    implementation AndroidX.activity_ktx
-    implementation AndroidX.fragment_ktx
-    implementation Lifecycle.common
-    implementation Lifecycle.reactivestreams
+
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation AndroidX.activity_ktx
+    implementation AndroidX.fragment_ktx
 }
