--- a/build.gradle
+++ b/build.gradle
@@ -6,17 +6,17 @@ buildscript {
     }
     repositories {
 
-        maven {
-            url uri("../../release/")
-        }
+//        maven {
+//            url uri("../../release/")
+//        }
         google()
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
-        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.0'
-        classpath 'com.weiggle.sample:hello-demo:1.6-SNAPSHOT'
+//        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.0'
+//        classpath 'com.weiggle.sample:hello-demo:1.6-SNAPSHOT'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,6 +25,7 @@ buildscript {
 
 plugins {
     id "com.github.versionplugin" apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
 }
 
 allprojects {
