--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.weiggle">
 
-    <permission android:name="android.permission.RECORD_AUDIO"/>
+<!--    <permission android:name="android.permission.RECORD_AUDIO" />-->
 
-    <queries>
-        <intent>
-            <action android:name="android.intent.action.TTS_SERVICE" />
-        </intent>
-    </queries>
+<!--    <queries>-->
+<!--        <intent>-->
+<!--            <action android:name="android.intent.action.TTS_SERVICE" />-->
+<!--        </intent>-->
+<!--    </queries>-->
 
     <application
         android:allowBackup="true"
@@ -17,6 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sample">
+        <activity
+            android:name=".mnn.MnnActivity"
+            android:exported="false" />
         <activity
             android:name=".speech.SpeechActivity"
             android:exported="false" />
