--- a/jetpack/build.gradle
+++ b/jetpack/build.gradle
@@ -1,4 +1,6 @@
 import com.github.versionplugin.AndroidX
+import com.github.versionplugin.BuildConfig
+import com.github.versionplugin.Lifecycle
 
 plugins {
     id 'com.android.application'
@@ -6,7 +8,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion BuildConfig.compileSdkVersion
 
     defaultConfig {
         applicationId "com.github.weiggle.jetpack"
@@ -35,13 +37,11 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation AndroidX.activity_ktx
     implementation AndroidX.fragment_ktx
+    implementation Lifecycle.runtimeKtx
 }
