--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 import com.github.versionplugin.AndroidX
+import com.github.versionplugin.BuildConfig
 import com.github.versionplugin.Lifecycle
 
 plugins {
@@ -9,12 +10,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "31.0.3"
+    compileSdkVersion BuildConfig.compileSdkVersion
+//    buildToolsVersion BuildConfig.buildToolsVersion
 
     defaultConfig {
         applicationId "com.github.weiggle"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -33,7 +34,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11
     }
 
     buildFeatures {
@@ -61,7 +62,10 @@ dependencies {
     implementation AndroidX.fragment_ktx
     implementation Lifecycle.common
     implementation Lifecycle.reactivestreams
+    implementation Lifecycle.runtimeKtx
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'io.github.weiggle:drawable:1.0.1'
 }
