--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.github.weiggle">
-
-<!--    <permission android:name="android.permission.RECORD_AUDIO" />-->
-
-<!--    <queries>-->
-<!--        <intent>-->
-<!--            <action android:name="android.intent.action.TTS_SERVICE" />-->
-<!--        </intent>-->
-<!--    </queries>-->
 
     <application
         android:allowBackup="true"
@@ -17,6 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sample">
+        <activity
+            android:name=".pools.ObjectPoolsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ads.AdsActivity"
+            android:exported="false" />
         <activity
             android:name=".mnn.MnnActivity"
             android:exported="false" />
