--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@ include ':drawable'
 include ':plugintest'
 include ':jetpack'
 include ':compose'
-
+include ':json'
 println("setting gradle name:======> " + gradle.class.name)
