--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.github.weiggle">
 
+    <permission android:name="android.permission.RECORD_AUDIO" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +27,9 @@
         <activity
             android:name=".mnn.MnnActivity"
             android:exported="false" />
+        <activity
+            android:name=".speech.filter.InputFilerActivity"
+            android:exported="true" />
         <activity
             android:name=".speech.SpeechActivity"
             android:exported="false" />
